Fixed overflow in body due a scrollreveal from right

--- a/main.css
+++ b/main.css
@@ -29,6 +29,7 @@ body{
 	background: var(--color-bg) url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 320'%3E%3Cpath fill='%231788FA' fill-opacity='1' d='M0,192L60,186.7C120,181,240,171,360,186.7C480,203,600,245,720,240C840,235,960,181,1080,149.3C1200,117,1320,107,1380,101.3L1440,96L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z'%3E%3C/path%3E%3C/svg%3E") no-repeat bottom/100%;
 	color: var(--color-text);
 	margin:  0;
+	overflow-x: hidden;
 }
 body.dark{
 	background: var(--color-title);
